--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "dependencies": {
-    "express": "^4.18.2",
-    "nodemon": "^2.0.20",
+    "@faker-js/faker": "^7.6.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express": "^4.18.2",
     "express-jwt": "^5.3.1",
     "express-validator": "^6.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
+    "nodemon": "^2.0.20",
     "npm": "^6.13.0",
     "uuid": "^3.3.3"
   }
